Refactoring integration tests for AdController and adding new test scenarios